src/objects/Customer_Meeting_External_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Meeting__c</fullName>
        <label>Customer Meeting</label>
        <referenceTo>Customer_Meeting__c</referenceTo>
        <relationshipName>Customer_Meeting_External_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>External_Attendee__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Customer_Meeting_External_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>External_Attendee__r.MobilePhone</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>External_Attendee__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>External_Attendee__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Meeting External Attendee</label>
    <nameField>
        <displayFormat>ExtAttendee-{0}</displayFormat>
        <label>External Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting External Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>